hphp/hack/test/typecheck/list_destructuring_too_few.php
<?hh

function f((int, string) $t): void {
  list($a, $b, $c) = $t;
}
